toggle hamburger into X when clicked

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </a>
 
         <!-- Nav links -->
-        <menu class="hide">
+        <menu id="nav-links" class="hide">
           <li><a href="#plans">Plans</a></li>
           <li><a href="#how-it-works">How it works</a></li>
         </menu>
@@ -30,8 +30,10 @@
         <a href="" class="free-demo btn">Free Demo</a>
 
         <!-- Hamburger menu -->
-        <button class="toggle-menu-button">
-          <i class="fas fa-bars toggle-menu-icon"></i>
+        <button id="toggle-menu-button">
+          <hr class="top-bar line"></hr>
+          <hr class="middle-bar line"></hr>
+          <hr class="bottom-bar line"></hr>
         </button>
       </div>
     </nav>
