--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <menu id="nav-links" class="hide">
           <li><a href="#plans">Plans</a></li>
           <li><a href="#how-it-works">How it works</a></li>
+          <li><a href="#reviews">Reviews</a></li>
+          <li><a href="#faqs">FAQs</a></li>
+          <a href="" class="get-started btn">Get Started for free</a>
         </menu>
 
         <!-- Free demo -->
