--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
     <nav id="navbar">
       <div class="container flex items-center">
         <!-- Logo -->
-        <a href="index.html">
-          <img src="" alt="" id="logo" />
+        <a id="logo" href="index.html">
+          <img src="" alt="" />
           Prioritasker
         </a>
 
         <!-- Nav links -->
-        <menu id="nav-links" class="hide">
+        <menu id="nav-links">
           <li><a href="#plans">Plans</a></li>
           <li><a href="#how-it-works">How it works</a></li>
           <li><a href="#reviews">Reviews</a></li>
           <li><a href="#faqs">FAQs</a></li>
-          <a href="" class="get-started btn">Get Started for free</a>
+          <a href="" class="get-started btn hide">Get Started for free</a>
         </menu>
 
         <!-- Free demo -->
