--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <title>Prioritasker | Home</title>
   </head>
   <body>
+    <!-- Navbar -->
     <nav id="navbar">
-      <div class="container flex items-center">
+      <div class="container navbar-container">
         <!-- Logo -->
-        <a id="logo" href="index.html">
-          <img src="" alt="" />
-          Prioritasker
+        <a id="logo" href="index.html" title="Prioritasker logo - back to homepage">
+          <img src="assets/prioritasker-logo.svg" alt="Prioritasker logo" />
         </a>
 
         <!-- Nav links -->
@@ -29,15 +29,36 @@
         </menu>
 
         <!-- Free demo -->
-        <a href="" class="free-demo btn">Free Demo</a>
+        <a href="" class="cta btn">Free Demo</a>
 
         <!-- Hamburger menu -->
         <button id="toggle-menu-button">
-          <hr class="top-bar line"></hr>
-          <hr class="middle-bar line"></hr>
-          <hr class="bottom-bar line"></hr>
+          <hr class="top-bar bars"></hr>
+          <hr class="middle-bar bars"></hr>
+          <hr class="bottom-bar bars"></hr>
         </button>
       </div>
     </nav>
+
+    <!-- Hero -->
+    <header id="hero">
+      <div class="container hero-container">
+        <section class="hero-text">
+          <hgroup>
+            <h1>Prioritise the tasks of your business.</h1>
+            <p>Have a huge workload? Not meeting deadlines? Complete more work by prioritising the tasks with greatest ROI for your business.</p>
+          </hgroup>
+          <div class="ctas">
+            <p>No signup required!</p>
+            <a href="#" class="btn block">Try Prioritasker free</a>
+            <a href="#" class="btn btn-outline how-it-works-btn">How it works</a>
+          </div>
+        </section>
+        <img class="hero-img" src="assets/tasks-list-svgrepo-com.svg" alt="">
+        
+      </div>
+    </header>
+
+
   </body>
 </html>
