complete features section

--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/db095d3dfc.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/db095d3dfc.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css" />
     <title>Prioritasker | Home</title>
@@ -43,22 +40,57 @@
     <!-- Hero -->
     <header id="hero">
       <div class="container hero-container">
+        <!-- Hero text -->
         <section class="hero-text">
           <hgroup>
             <h1>Prioritise the tasks of your business.</h1>
             <p>Have a huge workload? Not meeting deadlines? Complete more work by prioritising the tasks with greatest ROI for your business.</p>
           </hgroup>
+          <!-- Cta btns -->
           <div class="ctas">
             <p>No signup required!</p>
             <a href="#" class="btn block">Try Prioritasker free</a>
             <a href="#" class="btn btn-outline how-it-works-btn">How it works</a>
           </div>
         </section>
+        <!-- Hero image -->
         <img class="hero-img" src="assets/tasks-list-svgrepo-com.svg" alt="">
-        
       </div>
     </header>
 
+    <section id="features">
+      <h2 class="features-heading">What's in it for you?</h2>
+      <div class="container features-container">
+        <article class="feature">
+          <div class="feature-contents">
+            <i class="fas fa-money-bill-trend-up"></i>
+            <h3>Grow your revenue</h3>
+            <p>By prioritising high ROI tasks you can increase sales.</p>
+          </div>
+        </article>
+        <article class="feature">
+          <div class="feature-contents">
+            <i class="fas fa-bolt"></i>
+            <h3>Improve efficiency</h3>
+            <p>Get more done by working smarter, not harder.</p>
+          </div>
+        </article>
+        <article class="feature">
+          <div class="feature-contents">
+            <i class="fas fa-arrow-up-right-dots"></i>
+            <h3>Scale your business</h3>
+            <p>Get more results and opportunities to scale your business.</p>
+          </div>
+        </article>
+        <article class="feature">
+          <div class="feature-contents">
+            <i class="fas fa-ribbon"></i>
+            <h3>Lead your market</h3>
+            <p>Outperform the competition and lead your market.</p>
+          </div>
+        </article>
+      </div>
+    </section>
 
   </body>
 </html>
