complete how-it-works section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       </div>
     </header>
 
+    <!-- Features -->
     <section id="features">
       <h2 class="features-heading">What's in it for you?</h2>
       <div class="container features-container">
@@ -92,5 +93,26 @@
       </div>
     </section>
 
+    <!-- How it works -->
+    <section id="how-it-works">
+      <div class="container how-it-works-container">
+        <h2>How it works</h2>
+        <ul class="steps">
+          <li class="step"><p>1. Add a task</p>
+            <img src="assets/GanttProject_2.6.6.png" alt="screenshot of a task being added in Prioritasker">
+          </li>
+          <li class="step"><p>2. Sort it</p>
+            <img src="assets/GanttProject_2.6.6.png" alt="screenshot of a task being added in Prioritasker">
+          </li>
+          <li class="step"><p>3. Review it</p>
+            <img src="assets/GanttProject_2.6.6.png" alt="screenshot of a task being added in Prioritasker">
+          </li>
+          <li class="step"><p>4. Complete it.</p>
+            <img src="assets/GanttProject_2.6.6.png" alt="screenshot of a task being added in Prioritasker">
+          </li>
+        </ul>
+        <a href="#" class="btn cta">Get Started for free!</a>
+      </div>
+    </section>
   </body>
 </html>
