complete plans section

--- a/index.html
+++ b/index.html
@@ -114,5 +114,49 @@
         <a href="#" class="btn cta">Get Started for free!</a>
       </div>
     </section>
+
+    <section id="plans">
+      <div class="container plans-container">
+        <h2>Our Plans</h2>
+        <ul class="plans">
+          <li class="plan-container">
+            <article class="plan">
+              <h3>Exclusive plan</h3>
+              <ul class="plan-benefits">
+                <li>Unlimited users</li>
+                <li>Unlimited tasks</li>
+                <li>14 days free</li>
+                <li>10GB storage space/user</li>
+                <li>24/7 support</li>
+              </ul>
+            </article>
+          </li>
+          <li class="plan-container">
+            <article class="plan">
+              <h3>Premium plan</h3>
+              <ul class="plan-benefits">
+                <li>Unlimited users</li>
+                <li>Unlimited tasks</li>
+                <li>14 days free</li>
+                <li>10GB storage space/user</li>
+                <li>24/7 support</li>
+              </ul>
+            </article>
+          </li>
+          <li class="plan-container">
+            <article class="plan">
+              <h3>Starter plan</h3>
+              <ul class="plan-benefits">
+                <li>Unlimited users</li>
+                <li>Unlimited tasks</li>
+                <li>14 days free</li>
+                <li>10GB storage space/user</li>
+                <li>24/7 support</li>
+              </ul>
+            </article>
+          </li>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
