complete testimonials section

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
       </div>
     </section>
 
+    <!-- Plans -->
     <section id="plans">
       <div class="container plans-container">
         <h2>Our Plans</h2>
@@ -153,6 +154,35 @@
                 <li>10GB storage space/user</li>
                 <li>24/7 support</li>
               </ul>
+            </article>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="testimonials">
+      <div class="container testimonials-container">
+        <h2>Testimonials</h2>
+        <ul class="testimonials">
+          <li>
+            <article>
+              <img src="assets/sergio-de-paula-c_GmwfHBDzk-unsplash.jpg" alt="a headshot image of the person who said the quote below" class="headshot">
+              <i class="fas fa-quote-left"></i>
+              <p>This app helped me do X...</p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <img src="assets/jonas-kakaroto-mjRwhvqEC0U-unsplash.jpg" alt="a headshot image of the person who said the quote below" class="headshot">
+              <i class="fas fa-quote-left"></i>
+              <p>Very good...</p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <img src="assets/vicky-hladynets-C8Ta0gwPbQg-unsplash.jpg" alt="a headshot image of the person who said the quote below" class="headshot">
+              <i class="fas fa-quote-left"></i>
+              <p>Would highly recommend...</p>
             </article>
           </li>
         </ul>
