complete cta section

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
       </div>
     </section>
 
+    <!-- Testimonials -->
     <section id="testimonials">
       <div class="container testimonials-container">
         <h2>Testimonials</h2>
@@ -186,6 +187,18 @@
             </article>
           </li>
         </ul>
+      </div>
+    </section>
+
+    <!-- Final CTA -->
+    <section id="cta">
+      <div class="container cta-container">
+        <img class="light-bulb" src="assets/light-bulb-technology-svgrepo-com.svg" alt="light bulb">
+        <div class="cta-text">
+          <h2>Get more work done</h2>
+          <p>Join Prioritasker today to strategically tackle your workload for greater efficiency</p>
+          <a href="#" class="btn cta">Get Started Now!</a>
+        </div>
       </div>
     </section>
   </body>
