--- a/index.html
+++ b/index.html
@@ -60,43 +60,53 @@
 
     <!-- Features -->
     <section id="features">
-      <h2 class="features-heading">What's in it for you?</h2>
-      <div class="container features-container">
-        <article class="feature">
-          <div class="feature-contents">
-            <i class="fas fa-money-bill-trend-up"></i>
-            <h3>Grow your revenue</h3>
-            <p>By prioritising high ROI tasks you can increase sales.</p>
-          </div>
-        </article>
-        <article class="feature">
-          <div class="feature-contents">
-            <i class="fas fa-bolt"></i>
-            <h3>Improve efficiency</h3>
-            <p>Get more done by working smarter, not harder.</p>
-          </div>
-        </article>
-        <article class="feature">
-          <div class="feature-contents">
-            <i class="fas fa-arrow-up-right-dots"></i>
-            <h3>Scale your business</h3>
-            <p>Get more results and opportunities to scale your business.</p>
-          </div>
-        </article>
-        <article class="feature">
-          <div class="feature-contents">
-            <i class="fas fa-ribbon"></i>
-            <h3>Lead your market</h3>
-            <p>Outperform the competition and lead your market.</p>
-          </div>
-        </article>
+      <div class="container">
+      <h2 class="section-heading">What's in it for you?</h2>
+        <ul class="features-container">
+          <li>
+            <article class="feature">
+              <div class="feature-contents">
+                <i class="fas fa-money-bill-trend-up"></i>
+                <h3>Grow your revenue</h3>
+                <p>By prioritising high ROI tasks you can increase sales.</p>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article class="feature">
+              <div class="feature-contents">
+                <i class="fas fa-bolt"></i>
+                <h3>Improve efficiency</h3>
+                <p>Get more done by working smarter, not harder.</p>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article class="feature">
+              <div class="feature-contents">
+                <i class="fas fa-arrow-up-right-dots"></i>
+                <h3>Scale your business</h3>
+                <p>Get more results and opportunities to scale your business.</p>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article class="feature">
+              <div class="feature-contents">
+                <i class="fas fa-ribbon"></i>
+                <h3>Lead your market</h3>
+                <p>Outperform the competition and lead your market.</p>
+              </div>
+            </article>
+          </li>
+        </ul>
       </div>
     </section>
 
     <!-- How it works -->
     <section id="how-it-works">
       <div class="container how-it-works-container">
-        <h2>How it works</h2>
+        <h2 class="section-heading">How it works</h2>
         <ul class="steps">
           <li class="step"><p>1. Add a task</p>
             <img src="assets/GanttProject_2.6.6.png" alt="screenshot of a task being added in Prioritasker">
@@ -118,7 +128,7 @@
     <!-- Plans -->
     <section id="plans">
       <div class="container plans-container">
-        <h2>Our Plans</h2>
+        <h2 class="section-heading">Our Plans</h2>
         <ul class="plans">
           <li class="plan-container">
             <article class="plan">
@@ -130,6 +140,7 @@
                 <li>10GB storage space/user</li>
                 <li>24/7 support</li>
               </ul>
+              <a href="#" class="btn cta">Choose this plan</a>
             </article>
           </li>
           <li class="plan-container">
@@ -142,6 +153,7 @@
                 <li>10GB storage space/user</li>
                 <li>24/7 support</li>
               </ul>
+              <a href="#" class="btn cta">Choose this plan</a>
             </article>
           </li>
           <li class="plan-container">
@@ -154,6 +166,7 @@
                 <li>10GB storage space/user</li>
                 <li>24/7 support</li>
               </ul>
+              <a href="#" class="btn cta">Choose this plan</a>
             </article>
           </li>
         </ul>
@@ -163,7 +176,7 @@
     <!-- Testimonials -->
     <section id="testimonials">
       <div class="container testimonials-container">
-        <h2>Testimonials</h2>
+        <h2 class="section-heading">Testimonials</h2>
         <ul class="testimonials">
           <li>
             <article>
@@ -186,7 +199,54 @@
               <p>Would highly recommend...</p>
             </article>
           </li>
+          <li>
+            <article>
+              <img src="assets/sergio-de-paula-c_GmwfHBDzk-unsplash.jpg" alt="a headshot image of the person who said the quote below" class="headshot">
+              <i class="fas fa-quote-left"></i>
+              <p>This app helped me do X...</p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <img src="assets/jonas-kakaroto-mjRwhvqEC0U-unsplash.jpg" alt="a headshot image of the person who said the quote below" class="headshot">
+              <i class="fas fa-quote-left"></i>
+              <p>Very good...</p>
+            </article>
+          </li>
         </ul>
+      </div>
+    </section>
+
+    <!-- FAQs -->
+    <section id="faqs">
+      <div class="container faqs-container">
+        <h2 class="section-heading">FAQs</h2>
+        <details>
+          <summary>What is your pricing?</summary>
+          <ul>
+            <li><p>Exclusive Plan - £29.99/month</p></li>
+            <li><p>Premium Plan - £19.99/month</p></li>
+            <li><p>Starter Plan - Free for 14 days</p></li>
+          </ul>
+        </details>
+        <details>
+          <summary>How to use Prioritasker?</summary>
+          <ul>
+            <li><p>1. Create an account</p></li>
+            <li><p>2. Add tasks</p></li>
+            <li><p>3. Answer to how important and urgent each task is </p></li>
+            <li><p>4. Review your tasks. Your tasks will be organised by priority i.e. Do Now (highest priority) all the way to Delete (lowest priority)</p></li>
+            <li><p>5. Complete the tasks of highest priority first i.e. 'Do Now' tasks</p></li>
+          </ul>
+        </details>
+        <details>
+          <summary>How long does the free trial last?</summary>
+          <p>14 days</p>
+        </details>
+        <details>
+          <summary>How can Prioritasker help my business?</summary>
+          <p>It can help you prioritise your workload so you can focus on achieving the tasks with greatest ROI for your business first. As opposed to working on low importance tasks which can be delegated or even deleted all together.</p>
+        </details>
       </div>
     </section>
 
@@ -201,5 +261,58 @@
         </div>
       </div>
     </section>
+
+    <!-- Footer -->
+    <footer id="footer">
+      <article class="newsletter-optin">
+        <div class="container">
+          <h4>Increase sales</h4>
+          <p>Get a free guide on how to increase sales for your business using 7 work management techniques.</p>
+          <div class="optin">
+            <label for="email">Email</label><br>
+            <input type="email" name="email" placeholder="Enter your email" id="email">
+            <input type="button" value="Get the guide">
+          </div>
+        </div>
+      </article>
+      <div class="container">
+        <div class="footer-sections">
+          <div class="prioritasker">
+            <h4 class="footer-heading">Prioritasker</h4>
+            <ul class="footer-links">
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Reviews</a></li>
+              <li><a href="#">How it works</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Sitemap</a></li>
+            </ul>
+          </div>
+          <div class="resources">
+            <h4 class="footer-heading">Resources</h4>
+            <ul class="footer-links">
+              <li><a href="#">Help center</a></li>
+              <li><a href="#">Developers</a></li>
+              <li><a href="#">Tutorials</a></li>
+            </ul>
+          </div>
+          <div class="legal">
+            <h4 class="footer-heading">Legal</h4>
+            <ul class="footer-links">
+              <li><a href="#">Privacy</a></li>
+              <li><a href="#">Cookies</a></li>
+              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="#">Accessibility</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="socials">
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+        </div>
+        <p class="copyright">&copy; 2024 Prioritasker, All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
