--- a/index.html
+++ b/index.html
@@ -180,37 +180,32 @@
         <ul class="testimonials">
           <li>
             <article>
-              <img src="assets/sergio-de-paula-c_GmwfHBDzk-unsplash.jpg" alt="a headshot image of the person who said the quote below" class="headshot">
               <i class="fas fa-quote-left"></i>
-              <p>This app helped me do X...</p>
+              <p>Would highly recommend</p>
             </article>
           </li>
           <li>
             <article>
-              <img src="assets/jonas-kakaroto-mjRwhvqEC0U-unsplash.jpg" alt="a headshot image of the person who said the quote below" class="headshot">
               <i class="fas fa-quote-left"></i>
-              <p>Very good...</p>
+              <p>Great</p>
             </article>
           </li>
           <li>
             <article>
-              <img src="assets/vicky-hladynets-C8Ta0gwPbQg-unsplash.jpg" alt="a headshot image of the person who said the quote below" class="headshot">
               <i class="fas fa-quote-left"></i>
-              <p>Would highly recommend...</p>
+              <p>Very good</p>
             </article>
           </li>
           <li>
             <article>
-              <img src="assets/sergio-de-paula-c_GmwfHBDzk-unsplash.jpg" alt="a headshot image of the person who said the quote below" class="headshot">
               <i class="fas fa-quote-left"></i>
-              <p>This app helped me do X...</p>
+              <p>This app was helpful to my business</p>
             </article>
           </li>
           <li>
             <article>
-              <img src="assets/jonas-kakaroto-mjRwhvqEC0U-unsplash.jpg" alt="a headshot image of the person who said the quote below" class="headshot">
               <i class="fas fa-quote-left"></i>
-              <p>Very good...</p>
+              <p>I liked the feature, it came in really handy</p>
             </article>
           </li>
         </ul>
@@ -268,11 +263,11 @@
         <div class="container">
           <h4>Increase sales</h4>
           <p>Get a free guide on how to increase sales for your business using 7 work management techniques.</p>
-          <div class="optin">
+          <form class="optin">
             <label for="email">Email</label><br>
             <input type="email" name="email" placeholder="Enter your email" id="email">
-            <input type="button" value="Get the guide">
-          </div>
+            <input type="submit" value="Get the guide">
+          </form>
         </div>
       </article>
       <div class="container">
@@ -290,7 +285,7 @@
           <div class="resources">
             <h4 class="footer-heading">Resources</h4>
             <ul class="footer-links">
-              <li><a href="#">Help center</a></li>
+              <li><a href="#">Help Center</a></li>
               <li><a href="#">Developers</a></li>
               <li><a href="#">Tutorials</a></li>
             </ul>
