create function that determines what user should do with task

--- a/app.html
+++ b/app.html
@@ -15,6 +15,7 @@
     <a class="back-to-home" href="index.html"><i class="fas fa-chevron-left"></i>Back to home</a>
       <header id="add-task">
         <div class="container">
+          <!-- Enter a task form -->
           <form>
             <label for="input">Add tasks</label><br><br>
             <div>
@@ -23,6 +24,7 @@
             </div>
           </form>
           
+          <!-- Task quiz -->
           <article id="quiz" class="task-questions hidden">
               <p class="task-contents"></p>
               <form action="">
