--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </nav>
 
         <!-- Display free demo cta -->
-        <a href="app/app.html" class="cta btn">Free Demo</a>
+        <a href="app/add-task.html" class="cta btn">Free Demo</a>
       </div>
     </nav>
 
@@ -41,7 +41,7 @@
           <h1 class="hero-heading">Prioritise the tasks of your business.</h1>
           <p class="hero-text">Have a huge workload? Not meeting deadlines? Complete more work by prioritising the tasks with greatest ROI for your business.</p>
           <!-- Add ctas -->
-            <a href="app/app.html" class="get-started-btn btn">Try Prioritasker free</a>
+            <a href="app/add-task.html" class="get-started-btn btn">Try Prioritasker free</a>
             <a href="#how-it-works" class="btn btn-outline how-it-works-btn">How it works</a>
             <br><br>
             <span class="no-signup-req">No signup required!</span>
