--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/db095d3dfc.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
     <title>Prioritasker | Home</title>
   </head>
   <body id="body">
@@ -29,7 +29,7 @@
         </nav>
 
         <!-- Display free demo cta -->
-        <a href="app/screens/add-task.html" class="cta btn">Free Demo</a>
+        <a href="screens/add-a-task.html" class="cta btn">Free Demo</a>
       </div>
     </nav>
 
@@ -41,13 +41,13 @@
           <h1 class="hero-heading">Prioritise the tasks of your business.</h1>
           <p class="hero-text">Have a huge workload? Not meeting deadlines? Complete more work by prioritising the tasks with greatest ROI for your business.</p>
           <!-- Add ctas -->
-            <a href="app/screens/add-task.html" class="get-started-btn btn">Try Prioritasker free</a>
+            <a href="screens/add-a-task.html" class="get-started-btn btn">Try Prioritasker free</a>
             <a href="#how-it-works" class="btn btn-outline how-it-works-btn">How it works</a>
             <br><br>
             <span class="no-signup-req">No signup required!</span>
         </hgroup>
         <!-- Display hero image -->
-        <img class="hero-img" src="img/img-hero.svg" alt="">
+        <img class="hero-img" src="assets/img/img-hero.svg" alt="">
       </div>
     </header>
 
