change directory structure

--- a/app/screens/add-a-task.html
+++ b/app/screens/add-a-task.html
@@ -27,13 +27,7 @@
             />
 
             <!-- Add a task button -->
-            <button
-              onclick="window.location.href='';"
-              type="submit"
-              class="add-task-btn"
-            >
-              Add
-            </button>
+            <button type="submit" class="add-task-btn">Add</button>
           </div>
         </form>
       </div>
