--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/db095d3dfc.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Prioritasker | Home</title>
   </head>
   <body id="body">
@@ -20,13 +20,13 @@
         </a>
 
         <!-- Display nav links -->
-        <nav id="nav-links" class="hidden">
+        <ul id="nav-links" class="hidden">
           <li class="nav-link"><a href="#features">Benefits</a></li>
           <li class="nav-link"><a href="#how-it-works">How it works</a></li>
           <li class="nav-link"><a href="#plans">Plans</a></li>
           <li class="nav-link"><a href="#testimonials">Reviews</a></li>
           <li class="nav-link"><a href="#faqs">FAQs</a></li>
-        </nav>
+        </ul>
 
         <!-- Display free demo cta -->
         <a href="screens/add-a-task.html" class="cta btn">Free Demo</a>
