--- a/app/screens/add-a-task.html
+++ b/app/screens/add-a-task.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../styles/style.css" />
     <link rel="stylesheet" href="../styles/app.css" />
-    <link rel="stylesheet" href="/styles/style.css" />
     <title>Prioritasker | Add task</title>
   </head>
   <body>
