--- a/app/screens/confirm-task.html
+++ b/app/screens/confirm-task.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../app.css" />
-    <link rel="stylesheet" href="../../style.css" />
+    <link rel="stylesheet" href="../../styles/style.css" />
+    <link rel="stylesheet" href="../styles/app.css" />
     <title>Prioritasker | Task confirmation</title>
   </head>
   <body>
