--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </ul>
 
         <!-- Display free demo cta -->
-        <a href="screens/add-a-task.html" class="cta btn">Free Demo</a>
+        <a href="app/screens/add-a-task.html" class="cta btn">Free Demo</a>
       </div>
     </nav>
 
@@ -41,7 +41,7 @@
           <h1 class="hero-heading">Prioritise the tasks of your business.</h1>
           <p class="hero-text">Have a huge workload? Not meeting deadlines? Complete more work by prioritising the tasks with greatest ROI for your business.</p>
           <!-- Add ctas -->
-            <a href="screens/add-a-task.html" class="get-started-btn btn">Try Prioritasker free</a>
+            <a href="app/screens/add-a-task.html" class="get-started-btn btn">Try Prioritasker free</a>
             <a href="#how-it-works" class="btn btn-outline how-it-works-btn">How it works</a>
             <br><br>
             <span class="no-signup-req">No signup required!</span>
@@ -311,7 +311,7 @@
           <!-- Add cta text to be displayed above bulb image -->
         <p class="cta-description">Join Prioritasker today to strategically tackle your workload for greater efficiency</p>
         <!-- Add cta button -->
-        <a href="screens/add-a-task.html" class="btn">Get Started Now!</a>
+        <a href="app/screens/add-a-task.html" class="btn">Get Started Now!</a>
     </section>
     
     <!-- Create faqs section -->
