change quiz form action url

--- a/app/screens/add-a-task.html
+++ b/app/screens/add-a-task.html
@@ -22,7 +22,7 @@
             <input
               type="text"
               placeholder="Enter a new task"
-              name=""
+              name="inputted-task"
               id="input"
               required
             />
@@ -50,7 +50,7 @@
         <div class="container">
           <form
             id="submit-quiz-form"
-            action="http://127.0.0.1:8080/app/screens/confirm-task.html"
+            action="www.sul-devs.github.io/prioritasker/app/screens/confirm-task.html"
           >
             <!-- Create the structure first part of questionnaire -->
             <fieldset>
