add correct file paths to make submitQuizForm open task confirmation screen and link to go to review task list page

--- a/app/screens/confirm-task.html
+++ b/app/screens/confirm-task.html
@@ -26,7 +26,9 @@
           <button class="add-another-task-btn btn">Add another task...</button>
 
           <!-- Add a link for the user to review their current tasks -->
-          <a href="/app/screens/review-tasks.html" class="review-tasks-btn"
+          <a
+            href="/prioritasker/app/screens/review-tasks.html"
+            class="review-tasks-btn"
             >Review your tasks <i class="fas fa-chevron-right"></i
           ></a>
         </div>
