--- a/app/screens/add-a-task.html
+++ b/app/screens/add-a-task.html
@@ -48,7 +48,10 @@
       <!-- Ask the user questions about their task -->
       <article id="answer-task-questions">
         <div class="container">
-          <form id="submit-quiz-form" action="/app/screens/confirm-task.html">
+          <form
+            id="submit-quiz-form"
+            action="/prioritasker/app/screens/confirm-task.html"
+          >
             <!-- Create the structure first part of questionnaire -->
             <fieldset>
               <!-- Question 1 -->
