--- a/app/screens/review-tasks.html
+++ b/app/screens/review-tasks.html
@@ -9,7 +9,7 @@
     <title>Prioritasker | Review task list</title>
 </head>
 <body>
-  <a href="/app/screens/add-a-task.html">add another task</a>
+  <a href="/prioritasker/app/screens/add-a-task.html">add another task</a>
     <!---------------------- Review task list ---------------->
     <section id="task-list-screen">
         <header>
